--- a/gw2t.css
+++ b/gw2t.css
@@ -3744,7 +3744,7 @@ gem {
 .s16_spirit { background-position: -336px 0; }
 .s16_fotm_pristine { background-position: -352px 0; }
 .s16_map_dt { background-position: -368px 0; }
-.s16_tournament { background-position: -384px 0; }
+.s16_skirmish { background-position: -384px 0; }
 .s16_map_sw { background-position: -400px 0; }
 .s16_magnetite { background-position: -416px 0; }
 .s16_provisioner { background-position: -432px 0; }
