--- a/style/features.css
+++ b/style/features.css
@@ -180,40 +180,42 @@
 .dly_pvp_defender { background-position: -832px 0; }
 .dly_pvp_kills { background-position: -864px 0; }
 .dly_pvp_matches { background-position: -896px 0; }
-.dly_pvp_profession_ele_0 { background-position: -928px 0; }
-.dly_pvp_profession_ele_1 { background-position: -960px 0; }
-.dly_pvp_profession_eng_0 { background-position: -992px 0; }
-.dly_pvp_profession_eng_1 { background-position: -1024px 0; }
-.dly_pvp_profession_guard_0 { background-position: -1056px 0; }
-.dly_pvp_profession_guard_1 { background-position: -1088px 0; }
-.dly_pvp_profession_mes_0 { background-position: -1120px 0; }
-.dly_pvp_profession_mes_1 { background-position: -1152px 0; }
-.dly_pvp_profession_necro_0 { background-position: -1184px 0; }
-.dly_pvp_profession_necro_1 { background-position: -1216px 0; }
-.dly_pvp_profession_ranger_0 { background-position: -1248px 0; }
-.dly_pvp_profession_ranger_1 { background-position: -1280px 0; }
-.dly_pvp_profession_rev_0 { background-position: -1312px 0; }
-.dly_pvp_profession_rev_1 { background-position: -1344px 0; }
-.dly_pvp_profession_thief_0 { background-position: -1376px 0; }
-.dly_pvp_profession_thief_1 { background-position: -1408px 0; }
-.dly_pvp_profession_war_0 { background-position: -1440px 0; }
-.dly_pvp_profession_war_1 { background-position: -1472px 0; }
-.dly_pvp_rank { background-position: -1504px 0; }
-.dly_pvp_reward { background-position: -1536px 0; }
-.dly_pvp_stats { background-position: -1568px 0; }
-.dly_wvw_camp { background-position: -1600px 0; }
-.dly_wvw_caravan { background-position: -1632px 0; }
-.dly_wvw_creature { background-position: -1664px 0; }
-.dly_wvw_defender { background-position: -1696px 0; }
-.dly_wvw_guard { background-position: -1728px 0; }
-.dly_wvw_keep { background-position: -1760px 0; }
-.dly_wvw_kills { background-position: -1792px 0; }
-.dly_wvw_land { background-position: -1824px 0; }
-.dly_wvw_monument { background-position: -1856px 0; }
-.dly_wvw_ranker { background-position: -1888px 0; }
-.dly_wvw_ruins { background-position: -1920px 0; }
-.dly_wvw_spender { background-position: -1952px 0; }
-.dly_wvw_tower { background-position: -1984px 0; }
+.dly_pvp_participator { background-position: -928px 0; }
+.dly_pvp_profession_ele_0 { background-position: -960px 0; }
+.dly_pvp_profession_ele_1 { background-position: -992px 0; }
+.dly_pvp_profession_eng_0 { background-position: -1024px 0; }
+.dly_pvp_profession_eng_1 { background-position: -1056px 0; }
+.dly_pvp_profession_guard_0 { background-position: -1088px 0; }
+.dly_pvp_profession_guard_1 { background-position: -1120px 0; }
+.dly_pvp_profession_mes_0 { background-position: -1152px 0; }
+.dly_pvp_profession_mes_1 { background-position: -1184px 0; }
+.dly_pvp_profession_necro_0 { background-position: -1216px 0; }
+.dly_pvp_profession_necro_1 { background-position: -1248px 0; }
+.dly_pvp_profession_ranger_0 { background-position: -1280px 0; }
+.dly_pvp_profession_ranger_1 { background-position: -1312px 0; }
+.dly_pvp_profession_rev_0 { background-position: -1344px 0; }
+.dly_pvp_profession_rev_1 { background-position: -1376px 0; }
+.dly_pvp_profession_thief_0 { background-position: -1408px 0; }
+.dly_pvp_profession_thief_1 { background-position: -1440px 0; }
+.dly_pvp_profession_war_0 { background-position: -1472px 0; }
+.dly_pvp_profession_war_1 { background-position: -1504px 0; }
+.dly_pvp_rank { background-position: -1536px 0; }
+.dly_pvp_reward { background-position: -1568px 0; }
+.dly_pvp_stats { background-position: -1600px 0; }
+.dly_pvp_winner { background-position: -1632px 0; }
+.dly_wvw_camp { background-position: -1664px 0; }
+.dly_wvw_caravan { background-position: -1696px 0; }
+.dly_wvw_creature { background-position: -1728px 0; }
+.dly_wvw_defender { background-position: -1760px 0; }
+.dly_wvw_guard { background-position: -1792px 0; }
+.dly_wvw_keep { background-position: -1824px 0; }
+.dly_wvw_kills { background-position: -1856px 0; }
+.dly_wvw_land { background-position: -1888px 0; }
+.dly_wvw_monument { background-position: -1920px 0; }
+.dly_wvw_ranker { background-position: -1952px 0; }
+.dly_wvw_ruins { background-position: -1984px 0; }
+.dly_wvw_spender { background-position: -2016px 0; }
+.dly_wvw_tower { background-position: -2048px 0; }
 
 
 /* =============================================================================
