PoF currency and skins, directory options search

--- a/style/account.css
+++ b/style/account.css
@@ -857,6 +857,9 @@ a.chrWalletLink {
 .acc_wallet_31 { background-position: -864px 0; }
 .acc_wallet_32 { background-position: -896px 0; }
 .acc_wallet_33 { background-position: -928px 0; }
+.acc_wallet_34 { background-position: -960px 0; }
+.acc_wallet_35 { background-position: -992px 0; }
+.acc_wallet_36 { background-position: -1024px 0; }
 
 .eqpCharSeparator {
 	margin-top: 32px;
