--- a/gw2t.css
+++ b/gw2t.css
@@ -2990,6 +2990,9 @@ header.jsSection sup {
 #dirContent {
 	padding-bottom: 32px;
 }
+#dirSearch {
+	margin-left: 14px;
+}
 .dirHeader {
 	margin-left: 12px;
 	font-family: Menomonia;
@@ -3678,11 +3681,8 @@ dfn.cssHighlight {
 .cssStateWaiting {
 	background: #ffa500;
 }
-input[type="text"].cssSearchPassive {
-	color: #bbbbbb !important;
-}
-input[type="text"].cssSearchActive {
-	color: #ffddcc !important;
+input[type="text"]::placeholder {
+	color: #bbbbbb;
 }
 input[type="text"].cssSearchNone {
 	color: red !important;
@@ -3757,30 +3757,33 @@ gem {
 .s16_bubble { background-position: -560px 0; }
 .s16_bullet { background-position: -576px 0; }
 .s16_cob { background-position: -592px 0; }
-.s16_craft { background-position: -608px 0; }
-.s16_dragonite { background-position: -624px 0; }
-.s16_ecto { background-position: -640px 0; }
-.s16_info { background-position: -656px 0; }
-.s16_language { background-position: -672px 0; }
-.s16_loot { background-position: -736px 0; }
-.s16_map_bf { background-position: -752px 0; }
-.s16_map_bs { background-position: -768px 0; }
-.s16_map_dm { background-position: -784px 0; }
-.s16_map_ds { background-position: -800px 0; }
-.s16_map_eb { background-position: -816px 0; }
-.s16_map_ld { background-position: -832px 0; }
-.s16_map_sl { background-position: -848px 0; }
-.s16_mastery { background-position: -864px 0; }
-.s16_matrix { background-position: -880px 0; }
-.s16_money { background-position: -896px 0; }
-.s16_monument { background-position: -912px 0; }
-.s16_mysticcoin { background-position: -928px 0; }
-.s16_pvp { background-position: -944px 0; }
-.s16_starting { background-position: -960px 0; }
-.s16_token { background-position: -976px 0; }
-.s16_view { background-position: -992px 0; }
-.s16_wiki { background-position: -1008px 0; }
-.s16_youtube { background-position: -1024px 0; }
+.s16_contract { background-position: -608px 0; }
+.s16_craft { background-position: -624px 0; }
+.s16_dragonite { background-position: -640px 0; }
+.s16_ecto { background-position: -656px 0; }
+.s16_info { background-position: -672px 0; }
+.s16_language { background-position: -688px 0; }
+.s16_loot { background-position: -752px 0; }
+.s16_map_bf { background-position: -768px 0; }
+.s16_map_bs { background-position: -784px 0; }
+.s16_map_dm { background-position: -800px 0; }
+.s16_map_ds { background-position: -816px 0; }
+.s16_map_eb { background-position: -832px 0; }
+.s16_map_ld { background-position: -848px 0; }
+.s16_map_sl { background-position: -864px 0; }
+.s16_mastery { background-position: -880px 0; }
+.s16_matrix { background-position: -896px 0; }
+.s16_money { background-position: -912px 0; }
+.s16_monument { background-position: -928px 0; }
+.s16_mosaic { background-position: -944px 0; }
+.s16_mysticcoin { background-position: -960px 0; }
+.s16_pvp { background-position: -976px 0; }
+.s16_starting { background-position: -992px 0; }
+.s16_testimony { background-position: -1008px 0; }
+.s16_token { background-position: -1024px 0; }
+.s16_view { background-position: -1040px 0; }
+.s16_wiki { background-position: -1056px 0; }
+.s16_youtube { background-position: -1072px 0; }
 
 coppercoin, silvercoin, goldcoin, gemunit, karmaunit, laurelunit {
 	display: inline-block;
