Sale update, PoF specialization icons

--- a/style/account.css
+++ b/style/account.css
@@ -793,21 +793,30 @@ a.chrWalletLink {
 .acc_prof_berserker { background-position: 0 0; }
 .acc_prof_chronomancer { background-position: -32px 0; }
 .acc_prof_daredevil { background-position: -64px 0; }
-.acc_prof_dragonhunter { background-position: -96px 0; }
-.acc_prof_druid { background-position: -128px 0; }
-.acc_prof_elementalist { background-position: -160px 0; }
-.acc_prof_engineer { background-position: -192px 0; }
-.acc_prof_guardian { background-position: -224px 0; }
-.acc_prof_herald { background-position: -256px 0; }
-.acc_prof_mesmer { background-position: -288px 0; }
-.acc_prof_necromancer { background-position: -320px 0; }
-.acc_prof_ranger { background-position: -352px 0; }
-.acc_prof_reaper { background-position: -384px 0; }
-.acc_prof_revenant { background-position: -416px 0; }
-.acc_prof_scrapper { background-position: -448px 0; }
-.acc_prof_tempest { background-position: -480px 0; }
-.acc_prof_thief { background-position: -512px 0; }
-.acc_prof_warrior { background-position: -544px 0; }
+.acc_prof_deadeye { background-position: -96px 0; }
+.acc_prof_dragonhunter { background-position: -128px 0; }
+.acc_prof_druid { background-position: -160px 0; }
+.acc_prof_elementalist { background-position: -192px 0; }
+.acc_prof_engineer { background-position: -224px 0; }
+.acc_prof_firebrand { background-position: -256px 0; }
+.acc_prof_guardian { background-position: -288px 0; }
+.acc_prof_herald { background-position: -320px 0; }
+.acc_prof_holosmith { background-position: -352px 0; }
+.acc_prof_mesmer { background-position: -384px 0; }
+.acc_prof_mirage { background-position: -416px 0; }
+.acc_prof_necromancer { background-position: -448px 0; }
+.acc_prof_ranger { background-position: -480px 0; }
+.acc_prof_reaper { background-position: -512px 0; }
+.acc_prof_renegade { background-position: -544px 0; }
+.acc_prof_revenant { background-position: -576px 0; }
+.acc_prof_scourge { background-position: -608px 0; }
+.acc_prof_scrapper { background-position: -640px 0; }
+.acc_prof_soulbeast { background-position: -672px 0; }
+.acc_prof_spellbreaker { background-position: -704px 0; }
+.acc_prof_tempest { background-position: -736px 0; }
+.acc_prof_thief { background-position: -768px 0; }
+.acc_prof_warrior { background-position: -800px 0; }
+.acc_prof_weaver { background-position: -832px 0; }
 
 .acc_craft { /* Crafting icon sprites */
 	width: 32px; height: 32px;
