--- a/style/features.css
+++ b/style/features.css
@@ -141,12 +141,13 @@
 	box-shadow: none;
 }
 .dly_region_ascalon { background-position: 0 0; }
-.dly_region_jungle { background-position: -32px 0; }
-.dly_region_kryta { background-position: -64px 0; }
-.dly_region_heart { background-position: -96px 0; }
-.dly_region_orr { background-position: -128px 0; }
-.dly_region_shiverpeaks { background-position: -160px 0; }
-.dly_region_wastes { background-position: -192px 0; }
+.dly_region_desert { background-position: -32px 0; }
+.dly_region_heart { background-position: -64px 0; }
+.dly_region_jungle { background-position: -96px 0; }
+.dly_region_kryta { background-position: -128px 0; }
+.dly_region_orr { background-position: -160px 0; }
+.dly_region_shiverpeaks { background-position: -192px 0; }
+.dly_region_wastes { background-position: -224px 0; }
 
 .dly {
 	background-image: url("../img/daily/dailies.png");
