PoF daily achievements placeholder

--- a/style/features.css
+++ b/style/features.css
@@ -161,62 +161,63 @@
 .dly_pve_activity { background-position: -192px 0; }
 .dly_pve_adventure { background-position: -224px 0; }
 .dly_pve_boss { background-position: -256px 0; }
-.dly_pve_dungeon_ac { background-position: -288px 0; }
-.dly_pve_dungeon_arah { background-position: -320px 0; }
-.dly_pve_dungeon_cm { background-position: -352px 0; }
-.dly_pve_dungeon_coe { background-position: -384px 0; }
-.dly_pve_dungeon_cof { background-position: -416px 0; }
-.dly_pve_dungeon_hotw { background-position: -448px 0; }
-.dly_pve_dungeon_se { background-position: -480px 0; }
-.dly_pve_dungeon_ta { background-position: -512px 0; }
-.dly_pve_event { background-position: -544px 0; }
-.dly_pve_forager { background-position: -576px 0; }
-.dly_pve_forger { background-position: -608px 0; }
-.dly_pve_fractal { background-position: -640px 0; }
-.dly_pve_jp { background-position: -672px 0; }
-.dly_pve_lumberer { background-position: -704px 0; }
-.dly_pve_miner { background-position: -736px 0; }
-.dly_pve_vista { background-position: -768px 0; }
-.dly_pvp_capture { background-position: -800px 0; }
-.dly_pvp_defender { background-position: -832px 0; }
-.dly_pvp_kills { background-position: -864px 0; }
-.dly_pvp_matches { background-position: -896px 0; }
-.dly_pvp_participator { background-position: -928px 0; }
-.dly_pvp_profession_ele_0 { background-position: -960px 0; }
-.dly_pvp_profession_ele_1 { background-position: -992px 0; }
-.dly_pvp_profession_eng_0 { background-position: -1024px 0; }
-.dly_pvp_profession_eng_1 { background-position: -1056px 0; }
-.dly_pvp_profession_guard_0 { background-position: -1088px 0; }
-.dly_pvp_profession_guard_1 { background-position: -1120px 0; }
-.dly_pvp_profession_mes_0 { background-position: -1152px 0; }
-.dly_pvp_profession_mes_1 { background-position: -1184px 0; }
-.dly_pvp_profession_necro_0 { background-position: -1216px 0; }
-.dly_pvp_profession_necro_1 { background-position: -1248px 0; }
-.dly_pvp_profession_ranger_0 { background-position: -1280px 0; }
-.dly_pvp_profession_ranger_1 { background-position: -1312px 0; }
-.dly_pvp_profession_rev_0 { background-position: -1344px 0; }
-.dly_pvp_profession_rev_1 { background-position: -1376px 0; }
-.dly_pvp_profession_thief_0 { background-position: -1408px 0; }
-.dly_pvp_profession_thief_1 { background-position: -1440px 0; }
-.dly_pvp_profession_war_0 { background-position: -1472px 0; }
-.dly_pvp_profession_war_1 { background-position: -1504px 0; }
-.dly_pvp_rank { background-position: -1536px 0; }
-.dly_pvp_reward { background-position: -1568px 0; }
-.dly_pvp_stats { background-position: -1600px 0; }
-.dly_pvp_winner { background-position: -1632px 0; }
-.dly_wvw_camp { background-position: -1664px 0; }
-.dly_wvw_caravan { background-position: -1696px 0; }
-.dly_wvw_creature { background-position: -1728px 0; }
-.dly_wvw_defender { background-position: -1760px 0; }
-.dly_wvw_guard { background-position: -1792px 0; }
-.dly_wvw_keep { background-position: -1824px 0; }
-.dly_wvw_kills { background-position: -1856px 0; }
-.dly_wvw_land { background-position: -1888px 0; }
-.dly_wvw_monument { background-position: -1920px 0; }
-.dly_wvw_ranker { background-position: -1952px 0; }
-.dly_wvw_ruins { background-position: -1984px 0; }
-.dly_wvw_spender { background-position: -2016px 0; }
-.dly_wvw_tower { background-position: -2048px 0; }
+.dly_pve_bounty { background-position: -288px 0; }
+.dly_pve_dungeon_ac { background-position: -320px 0; }
+.dly_pve_dungeon_arah { background-position: -352px 0; }
+.dly_pve_dungeon_cm { background-position: -384px 0; }
+.dly_pve_dungeon_coe { background-position: -416px 0; }
+.dly_pve_dungeon_cof { background-position: -448px 0; }
+.dly_pve_dungeon_hotw { background-position: -480px 0; }
+.dly_pve_dungeon_se { background-position: -512px 0; }
+.dly_pve_dungeon_ta { background-position: -544px 0; }
+.dly_pve_event { background-position: -576px 0; }
+.dly_pve_forager { background-position: -608px 0; }
+.dly_pve_forger { background-position: -640px 0; }
+.dly_pve_fractal { background-position: -672px 0; }
+.dly_pve_jp { background-position: -704px 0; }
+.dly_pve_lumberer { background-position: -736px 0; }
+.dly_pve_miner { background-position: -768px 0; }
+.dly_pve_vista { background-position: -800px 0; }
+.dly_pvp_capture { background-position: -832px 0; }
+.dly_pvp_defender { background-position: -864px 0; }
+.dly_pvp_kills { background-position: -896px 0; }
+.dly_pvp_matches { background-position: -928px 0; }
+.dly_pvp_participator { background-position: -960px 0; }
+.dly_pvp_profession_ele_0 { background-position: -992px 0; }
+.dly_pvp_profession_ele_1 { background-position: -1024px 0; }
+.dly_pvp_profession_eng_0 { background-position: -1056px 0; }
+.dly_pvp_profession_eng_1 { background-position: -1088px 0; }
+.dly_pvp_profession_guard_0 { background-position: -1120px 0; }
+.dly_pvp_profession_guard_1 { background-position: -1152px 0; }
+.dly_pvp_profession_mes_0 { background-position: -1184px 0; }
+.dly_pvp_profession_mes_1 { background-position: -1216px 0; }
+.dly_pvp_profession_necro_0 { background-position: -1248px 0; }
+.dly_pvp_profession_necro_1 { background-position: -1280px 0; }
+.dly_pvp_profession_ranger_0 { background-position: -1312px 0; }
+.dly_pvp_profession_ranger_1 { background-position: -1344px 0; }
+.dly_pvp_profession_rev_0 { background-position: -1376px 0; }
+.dly_pvp_profession_rev_1 { background-position: -1408px 0; }
+.dly_pvp_profession_thief_0 { background-position: -1440px 0; }
+.dly_pvp_profession_thief_1 { background-position: -1472px 0; }
+.dly_pvp_profession_war_0 { background-position: -1504px 0; }
+.dly_pvp_profession_war_1 { background-position: -1536px 0; }
+.dly_pvp_rank { background-position: -1568px 0; }
+.dly_pvp_reward { background-position: -1600px 0; }
+.dly_pvp_stats { background-position: -1632px 0; }
+.dly_pvp_winner { background-position: -1664px 0; }
+.dly_wvw_camp { background-position: -1696px 0; }
+.dly_wvw_caravan { background-position: -1728px 0; }
+.dly_wvw_creature { background-position: -1760px 0; }
+.dly_wvw_defender { background-position: -1792px 0; }
+.dly_wvw_guard { background-position: -1824px 0; }
+.dly_wvw_keep { background-position: -1856px 0; }
+.dly_wvw_kills { background-position: -1888px 0; }
+.dly_wvw_land { background-position: -1920px 0; }
+.dly_wvw_monument { background-position: -1952px 0; }
+.dly_wvw_ranker { background-position: -1984px 0; }
+.dly_wvw_ruins { background-position: -2016px 0; }
+.dly_wvw_spender { background-position: -2048px 0; }
+.dly_wvw_tower { background-position: -2080px 0; }
 
 
 /* =============================================================================
