Use cached zones, Daybreak currencies, DB update

--- a/style/account.css
+++ b/style/account.css
@@ -869,6 +869,15 @@ a.chrWalletLink {
 .acc_wallet_34 { background-position: -960px 0; }
 .acc_wallet_35 { background-position: -992px 0; }
 .acc_wallet_36 { background-position: -1024px 0; }
+.acc_wallet_37 { background-position: -1056px 0; }
+.acc_wallet_38 { background-position: -1088px 0; }
+.acc_wallet_39 { background-position: -1120px 0; }
+.acc_wallet_40 { background-position: -1152px 0; }
+.acc_wallet_41 { background-position: -1184px 0; }
+.acc_wallet_42 { background-position: -1216px 0; }
+.acc_wallet_43 { background-position: -1248px 0; }
+.acc_wallet_44 { background-position: -1280px 0; }
+.acc_wallet_45 { background-position: -1312px 0; }
 
 .eqpCharSeparator {
 	margin-top: 32px;
