--- a/gw2t.css
+++ b/gw2t.css
@@ -3764,40 +3764,52 @@ gem {
 .s16_proof { background-position: -464px 0; }
 .s16_magic { background-position: -480px 0; }
 .s16_glory { background-position: -496px 0; }
+.s16_contract { background-position: -512px 0; }
+.s16_mosaic { background-position: -528px 0; }
+.s16_testimony { background-position: -544px 0; }
+.s16_key_ab { background-position: -560px 0; }
+.s16_key_ds { background-position: -576px 0; }
+.s16_gaeting { background-position: -592px 0; }
+.s16_key_sw { background-position: -608px 0; }
+.s16_key_vb { background-position: -624px 0; }
+.s16_key_td { background-position: -640px 0; }
+.s16_key_dt { background-position: -656px 0; }
+.s16_trader { background-position: -672px 0; }
+.s16_volatile { background-position: -688px 0; }
 /* End of currencies sprites */
-.s16_achievement { background-position: -512px 0; }
-.s16_bauble { background-position: -528px 0; }
-.s16_blticket { background-position: -544px 0; }
-.s16_bubble { background-position: -560px 0; }
-.s16_bullet { background-position: -576px 0; }
-.s16_cob { background-position: -592px 0; }
-.s16_contract { background-position: -608px 0; }
-.s16_craft { background-position: -624px 0; }
-.s16_dragonite { background-position: -640px 0; }
-.s16_ecto { background-position: -656px 0; }
-.s16_info { background-position: -672px 0; }
-.s16_language { background-position: -688px 0; }
-.s16_loot { background-position: -752px 0; }
-.s16_map_bf { background-position: -768px 0; }
-.s16_map_bs { background-position: -784px 0; }
-.s16_map_dm { background-position: -800px 0; }
-.s16_map_ds { background-position: -816px 0; }
-.s16_map_eb { background-position: -832px 0; }
-.s16_map_ld { background-position: -848px 0; }
-.s16_map_sl { background-position: -864px 0; }
-.s16_mastery { background-position: -880px 0; }
-.s16_matrix { background-position: -896px 0; }
-.s16_money { background-position: -912px 0; }
-.s16_monument { background-position: -928px 0; }
-.s16_mosaic { background-position: -944px 0; }
-.s16_mysticcoin { background-position: -960px 0; }
-.s16_pvp { background-position: -976px 0; }
-.s16_starting { background-position: -992px 0; }
-.s16_testimony { background-position: -1008px 0; }
-.s16_token { background-position: -1024px 0; }
-.s16_view { background-position: -1040px 0; }
-.s16_wiki { background-position: -1056px 0; }
-.s16_youtube { background-position: -1072px 0; }
+.s16_achievement { background-position: -704px 0; }
+.s16_bauble { background-position: -720px 0; }
+.s16_blticket { background-position: -736px 0; }
+.s16_bubble { background-position: -752px 0; }
+.s16_bullet { background-position: -768px 0; }
+.s16_cob { background-position: -784px 0; }
+.s16_contract { background-position: -800px 0; }
+.s16_craft { background-position: -816px 0; }
+.s16_dragonite { background-position: -832px 0; }
+.s16_ecto { background-position: -848px 0; }
+.s16_info { background-position: -864px 0; }
+.s16_language { background-position: -880px 0; }
+.s16_loot { background-position: -944px 0; }
+.s16_map_bf { background-position: -960px 0; }
+.s16_map_bs { background-position: -976px 0; }
+.s16_map_dm { background-position: -992px 0; }
+.s16_map_ds { background-position: -1008px 0; }
+.s16_map_eb { background-position: -1024px 0; }
+.s16_map_ld { background-position: -1040px 0; }
+.s16_map_sl { background-position: -1056px 0; }
+.s16_mastery { background-position: -1072px 0; }
+.s16_matrix { background-position: -1088px 0; }
+.s16_money { background-position: -1104px 0; }
+.s16_monument { background-position: -1120px 0; }
+.s16_mosaic { background-position: -1136px 0; }
+.s16_mysticcoin { background-position: -1152px 0; }
+.s16_pvp { background-position: -1168px 0; }
+.s16_starting { background-position: -1184px 0; }
+.s16_testimony { background-position: -1200px 0; }
+.s16_token { background-position: -1216px 0; }
+.s16_view { background-position: -1232px 0; }
+.s16_wiki { background-position: -1248px 0; }
+.s16_youtube { background-position: -1264px 0; }
 
 coppercoin, silvercoin, goldcoin, gemunit, karmaunit, laurelunit {
 	display: inline-block;
