--- a/gw2t.css
+++ b/gw2t.css
@@ -3792,24 +3792,25 @@ gem {
 .s16_loot { background-position: -944px 0; }
 .s16_map_bf { background-position: -960px 0; }
 .s16_map_bs { background-position: -976px 0; }
-.s16_map_dm { background-position: -992px 0; }
-.s16_map_ds { background-position: -1008px 0; }
-.s16_map_eb { background-position: -1024px 0; }
-.s16_map_ld { background-position: -1040px 0; }
-.s16_map_sl { background-position: -1056px 0; }
-.s16_mastery { background-position: -1072px 0; }
-.s16_matrix { background-position: -1088px 0; }
-.s16_money { background-position: -1104px 0; }
-.s16_monument { background-position: -1120px 0; }
-.s16_mosaic { background-position: -1136px 0; }
-.s16_mysticcoin { background-position: -1152px 0; }
-.s16_pvp { background-position: -1168px 0; }
-.s16_starting { background-position: -1184px 0; }
-.s16_testimony { background-position: -1200px 0; }
-.s16_token { background-position: -1216px 0; }
-.s16_view { background-position: -1232px 0; }
-.s16_wiki { background-position: -1248px 0; }
-.s16_youtube { background-position: -1264px 0; }
+.s16_map_di { background-position: -992px 0; }
+.s16_map_dm { background-position: -1008px 0; }
+.s16_map_ds { background-position: -1024px 0; }
+.s16_map_eb { background-position: -1040px 0; }
+.s16_map_ld { background-position: -1056px 0; }
+.s16_map_sl { background-position: -1072px 0; }
+.s16_mastery { background-position: -1088px 0; }
+.s16_matrix { background-position: -1104px 0; }
+.s16_money { background-position: -1120px 0; }
+.s16_monument { background-position: -1136px 0; }
+.s16_mosaic { background-position: -1152px 0; }
+.s16_mysticcoin { background-position: -1168px 0; }
+.s16_pvp { background-position: -1184px 0; }
+.s16_starting { background-position: -1200px 0; }
+.s16_testimony { background-position: -1216px 0; }
+.s16_token { background-position: -1232px 0; }
+.s16_view { background-position: -1248px 0; }
+.s16_wiki { background-position: -1264px 0; }
+.s16_youtube { background-position: -1280px 0; }
 
 coppercoin, silvercoin, goldcoin, gemunit, karmaunit, laurelunit {
 	display: inline-block;
