Fix Auric Basin FR ES chains name, remove protocol from self URL in files meta

--- a/style/features.css
+++ b/style/features.css
@@ -1,5 +1,5 @@
 /*
- * This file is used by http://gw2timer.com/map
+ * This file is used by gw2timer.com/map
  * Additional stylesheet for the Map page's features.
  */
 
