--- a/style/features.css
+++ b/style/features.css
@@ -894,12 +894,13 @@ input[type="text"].rarity_Legendary { color: #9933ff; /* violet */ }
 .chl_ocean { background-position: -352px 0; }
 .chl_reef { background-position: -384px 0; }
 .chl_snowblind { background-position: -416px 0; }
-.chl_swamp { background-position: -448px 0; }
-.chl_thaumanova { background-position: -480px 0; }
-.chl_uncategorized { background-position: -512px 0; }
-.chl_underground { background-position: -544px 0; }
-.chl_urban { background-position: -576px 0; }
-.chl_volcanic { background-position: -608px 0; }
+.chl_sunqua { background-position: -448px 0; }
+.chl_swamp { background-position: -480px 0; }
+.chl_thaumanova { background-position: -512px 0; }
+.chl_uncategorized { background-position: -544px 0; }
+.chl_underground { background-position: -576px 0; }
+.chl_urban { background-position: -608px 0; }
+.chl_volcanic { background-position: -640px 0; }
 .chl_1_1 { background-position: 0 0; }
 .chl_1_2 { background-position: -32px 0; }
 .chl_1_3 { background-position: -64px 0; }
