--- a/gw2t.css
+++ b/gw2t.css
@@ -1667,6 +1667,7 @@ textarea.jsCopyCode {
 	box-shadow: 0px 0px 10px lime;
 }
 .tmlStripe {
+	z-index: -2;
 	position: absolute;
 	top: -16px;
 	margin-left: -16px;
